# play64

./: .gitignore  CMakeLists.txt  README.md  meson.build
asm/: CMakeLists.txt
asm/inc/asm/: assembler.hpp
asm/src/: assembler.cpp
asm/tests/: tests.cpp
docs/: MIPS Exceptions.pptx  branch_delay_slot.txt
docs/cart/cic/: cic-nus-6105.txt
src/: aligned.hpp  head.cpp  signal.cpp  signal.hpp  tmem.hpp  todo.txt
src/cartridge/: ccode.hpp  head.hpp  manufacts.cpp  manufacts.hpp
src/cli/: args.cpp  args.hpp  cmdparams.cpp  cmdparams.hpp  cstr.cpp  cstr.hpp  dasm64.cpp  dbg64.cpp  debug.cpp  debug.hpp  play64.cpp  printstep.cpp  printstep.hpp  trace.cpp  trace.hpp  trace64.cpp
src/cpu/cop0/: cop0.cpp  cop0_test.cpp  cop0const.hpp  cop0str.cpp  cop0str.hpp  syscon.cpp  syscon.hpp
src/cpu/cop1/: cop1.cpp  cop1str.cpp  cop1str.hpp
src/cpu/fpu/: fpu.cpp  fpu.hpp
src/cpu/interpreter/: bitpos.hpp  err.hpp  instr.cpp  instr.hpp  instrstr.hpp  instrsz.hpp  interp.cpp  interp.hpp  op.hpp  pc.hpp  sext.cpp  sext.hpp
src/cpu/interpreter/normals/: normals.cpp  normals.hpp  normalsstr.cpp  normalsstr.hpp
src/cpu/interpreter/normals/cop0/: cop0.cpp  cop0str.cpp  cop0str.hpp  syscon.cpp  syscon.hpp
src/cpu/interpreter/normals/cop0/tlb/: tblsize.hpp  tlb.cpp  tlb.hpp  tlbops.cpp  tlbstr.cpp
src/cpu/interpreter/normals/cop1/: cop1.cpp  cop1str.cpp  cop1str.hpp
src/cpu/interpreter/normals/cop1/fpu/: fpu.cpp  fpu.hpp
src/cpu/interpreter/normals/regimms/: regimms.cpp  regimmsstr.cpp  regimmsstr.hpp
src/cpu/interpreter/normals/specials/: specials.cpp  specials.hpp  specialsstr.cpp  specialsstr.hpp
src/cpu/interpreter/regimms/: regimms.cpp  regimmsstr.cpp  regimmsstr.hpp
src/cpu/interpreter/registers/: cpu.cpp  cpu.hpp  register.hpp
src/cpu/interpreter/specials/: specials.cpp  specials.hpp  specialsstr.cpp  specialsstr.hpp
src/cpu/strings/: strmacros.hpp
src/cpu/tlb/: tlb.cpp  tlb.hpp  tlbops.cpp  tlbstr.cpp
src/data_types/: types.hpp
src/disassembler/: decode.cpp  decode.hpp  disassembly.hpp  hex.cpp  hex.hpp  hex_address_stream.cpp  hex_address_stream.hpp  strings.cpp  strings.hpp  strmanip.cpp  strmanip.hpp  tlbstr.hpp
src/gui/: VideoOutput.cpp  VideoOutput.h  app.cpp  dbg.cpp  dbg.hpp  disasm.cpp  disasm.hpp  dlg.hpp  menu.cpp  periph.cpp  periph.hpp  window.cpp
src/gui/frames/: main_frame.cpp  main_frame.hpp
src/gui/list_views/: regs.cpp  regs.hpp  viview.cpp  viview.hpp
src/gui/sdl/: window.hpp
src/gui/sfml/: window.cpp  window.h  window_test.cpp
src/gui/wxwidgets/: VideoOutput.cpp  VideoOutput.h  cmd.hpp  dbg.cpp  dbg.hpp  disasm.cpp  disasm.hpp  dlg.cpp  id.hpp  menu.hpp
src/gui/wxwidgets/frames/: main_frame.cpp  main_frame.hpp
src/gui/wxwidgets/list_views/: regs.cpp  regs.hpp
src/logging/: log.cpp  log.hpp
src/memory_map/: byteswap.cpp  byteswap.hpp  macros.hpp  mem.cpp  mem.hpp  memaddr.hpp  memmacros.hpp  mips_exception_handlers.hpp  pak.cpp  pak.hpp  physmem.cpp  physmem.hpp  vmem.cpp  vmem.hpp
src/memory_map/ai/: ai.cpp  ai.hpp
src/memory_map/mi/: mi.cpp  mi.hpp
src/memory_map/physical_memory/: physmem.cpp  physmem.hpp
src/memory_map/physical_memory/ai/: ai.cpp  ai.hpp
src/memory_map/physical_memory/cart/: pak.cpp  pak.hpp
src/memory_map/physical_memory/dp/: dp.cpp  dp.h
src/memory_map/physical_memory/mi/: mi.cpp  mi.hpp
src/memory_map/physical_memory/pi/: pi.cpp  pi.hpp
src/memory_map/physical_memory/rdram/: rdram.cpp  rdram.hpp
src/memory_map/physical_memory/ri/: ri.cpp  ri.hpp
src/memory_map/physical_memory/si/: si.cpp  si.hpp
src/memory_map/physical_memory/si/pif/: pif.cpp  pif.hpp
src/memory_map/physical_memory/sp/: sp.hpp
src/memory_map/physical_memory/vi/: control.cpp  control.h  control_test.cpp  vi.cpp  vi.hpp  vi_test.cpp  video.cpp  video.h
src/memory_map/pi/: pi.cpp  pi.hpp
src/memory_map/rdram/: rdram.cpp  rdram.hpp
src/memory_map/ri/: ri.cpp  ri.hpp
src/memory_map/si/: si.cpp  si.hpp
src/memory_map/si/pif/: cic.cpp  pif.cpp  pif.hpp
src/memory_map/sp/: sp.cpp  sp.hpp
src/memory_map/vi/: framebuffer.cpp  framebuffer.h  vi.cpp  vi.hpp
src/memory_map/virtual_memory/: vmem.cpp  vmem.hpp
tests/: macros.hpp  tests.cpp
